<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StartActivity"
    android:backgroundTint="@color/md_white_1000"
    android:background="@drawable/chat_wall"
    tools:targetApi="lollipop">

    <ImageView
        android:layout_width="100dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_height="100dp"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/icon"
        android:layout_above="@+id/start_reg_btn"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/colorPrimary"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/need_a_new_account"
        android:textColor="@color/md_white_1000"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_reg_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorAccent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/already_have_account"
        android:textColor="@android:color/white"
        tools:targetApi="lollipop" />


</RelativeLayout>