<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF">

    <RelativeLayout
        android:id="@+id/relLay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grad"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/profile_circle_border">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:background="@drawable/profile_circle"
                android:src="@drawable/person"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="2dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/profile_name"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="25dp" />

        <!-- <TextView
             android:id="@+id/verifyMsg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="Email Not Verfied !"
             android:textColor="#C2185B"
             android:textSize="20sp"
             android:textStyle="bold"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 -->

        <TextView
            android:id="@+id/verifyMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="@string/verified"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:visibility="gone"
            android:textColor="@color/materialize_primary_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/verifiedMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verifyMsg"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="@string/verifiedShow"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/materialize_primary_dark"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/linLay1"
            android:layout_below="@+id/verifiedMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/md_green_50"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_loginStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/last_login"
                        android:textAllCaps="true"
                        android:textColor="@color/materialize_primary_dark"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_loginStatusNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:text="0 second"
                        android:textAllCaps="false"
                        android:textColor="@color/materialize_primary_dark"
                        android:textSize="14sp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <RatingBar
            android:id="@+id/rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linLay1"
            android:layout_marginTop="5dp"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.1"
            android:layout_centerHorizontal="true"/>


        <ImageView
            android:id="@+id/edit_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_settings"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linLay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relLay1"
        android:orientation="horizontal">

    </LinearLayout>

    <!--todo-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linLay2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:background="@color/rsc_bottom_panel_accent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/md_green_800"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/profile_name"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/md_green_800"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="abc@gmail.com"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:inputType="textEmailAddress"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/md_green_800"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvPhoneNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="+1-202-555-0157"
                    android:digits="0123456789"
                    android:maxLength="10"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:inputType="phone"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_type"
                    android:textColor="@color/md_green_800"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvAccType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/individual"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/package_type"
                    android:textColor="@color/md_green_800"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvSchool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/free"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tvGradeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="@color/md_green_800"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvGrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="Colombo"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvClassLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_of_simple_ads"
                    android:textColor="@color/md_green_800"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvClass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="Unlimited"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAttendsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_of_featured_ads"
                    android:textColor="@color/md_green_800"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvAttends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>